<resources>
    <string name="app_name">Quiz App</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_answer">That\'s correct</string>
    <string name="incorrect_answer">That\'s incorrect</string>
    <string name="slope_question">The slope of a vertical line is undefined.</string>
    <string name="perpendicular_question">Two lines with positive slopes can be perpendicular.</string>
    <string name="product_question">The product of two positive numbers is NOT positive.</string>
    <string name="linear_question">Is this a linear equation? y=2x+4</string>
    <string name="quadratic_question">You can use the quadratic formula to solve third degree polynomials.</string>
    <string name="next_text">Next</string>
    <string name="back_text">Back</string>
    <string name="q_description">Android image</string>
</resources>
