<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity"

    >

    <ImageView
        android:layout_width="72dp"
        android:layout_height="114dp"
        android:src="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/q_description" />

    <TextView
        android:id="@+id/answer_text_view"
        android:text="@string/linear_question"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="35dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/true_button"
            android:text="@string/true_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/false_button"
            android:text="@string/false_button" />




    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <ImageButton
        android:layout_width="wrap_content"
        android:src="@drawable/arrow_back"
        android:layout_height="wrap_content"
        android:id="@+id/back_button"
        android:text="@string/back_text"
        android:contentDescription="@string/back_text" />

    <ImageButton
        android:src="@drawable/navigate_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/next_button"
        android:text="@string/next_text"
        android:contentDescription="@string/next_text"/>


    </LinearLayout>
</LinearLayout>





